tg-2335 [P2] Fix Cantidad de días internado incorrecto al ver un episodio antiguo

--- a/dba/liquibase/incrementales-v1_6.yml
+++ b/dba/liquibase/incrementales-v1_6.yml
@@ -1,3 +1,8 @@
 databaseChangeLog: 
     - logicalFilePath: incrementales-v1_6 
-
+    - changeSet:
+        id: drop-unused-discharge-date
+        author: martinscooper
+        - dropColumn: 
+            columnName: discharge_date
+            tableName: internment_episode 
