tg-2498 Fix Error liquibase al deployar tg-2335

--- a/dba/liquibase/incrementales-v1_6.yml
+++ b/dba/liquibase/incrementales-v1_6.yml
@@ -3,6 +3,8 @@ databaseChangeLog:
     - changeSet:
         id: drop-unused-discharge-date
         author: martinscooper
-        - dropColumn: 
-            columnName: discharge_date
-            tableName: internment_episode 
+        changes: 
+            - dropColumn: 
+                columnName: discharge_date
+                tableName: internment_episode
+ 
