--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -25,18 +25,17 @@
 		"@angular/platform-browser-dynamic": "~9.0.7",
 		"@angular/router": "~9.0.7",
 		"@angular/service-worker": "~9.0.7",
-		"@ngrx/store": "^8.6.0",
 		"@ngx-translate/core": "^12.1.2",
 		"@ngx-translate/http-loader": "^4.0.0",
 		"@types/file-saver": "^2.0.1",
 		"angular-calendar": "^0.28.16",
 		"angular-file-saver": "^1.1.3",
 		"date-fns": "^2.14.0",
+		"jwt-decode": "^3.1.2",
 		"moment": "^2.24.0",
 		"ng-recaptcha": "^5.0.0",
 		"ngx-moment": "^3.5.0",
 		"ngx-translate-multi-http-loader": "^3.0.0",
-		"ol": "6.1.1",
 		"rxjs": "~6.5.4",
 		"tslib": "^1.10.0",
 		"zone.js": "~0.10.2"
