Comienza desarrollo de 1.7

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -64,3 +64,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_6.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_7.yml
+    relativeToChangelogFile: true
