tg-2599. [BE] Implementar endpoint para obtener las posibles categorias de ordenes

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # = WEB 
 # ===============================
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 # ============= API =============
 server.servlet.context-path=/api
