tg-2617 Hacer cambios necesarios para que la obra social sea opcional

--- a/dba/liquibase/incrementales-v1_7.yml
+++ b/dba/liquibase/incrementales-v1_7.yml
@@ -1840,3 +1840,12 @@ databaseChangeLog:
                 referencedTableName: health_condition
                 validate: true
 
+
+    - changeSet:
+        id: dropNotNullConstraint-coverage_id
+        comment: medical_coverage_id puede ser null en la tabla service_request
+        author: martinscooper
+        changes:
+            - dropNotNullConstraint:
+                columnName: medical_coverage_id
+                tableName: service_request
