--- a/back-end/hospital-api/src/main/resources/application-qa.properties
+++ b/back-end/hospital-api/src/main/resources/application-qa.properties
@@ -1,5 +1,5 @@
 ## Add docker configuration here
-internment.document.directory=/sgh
+internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY:/sgh}
 token.secret=${TOKEN_SECRET:ultra_secret_token}
 
 google.recaptcha.enable = true
