--- a/front-end/webapp/angular.json
+++ b/front-end/webapp/angular.json
@@ -24,6 +24,7 @@
 						"tsConfig": "tsconfig.app.json",
 						"aot": true,
 						"assets": [
+							"src/robots.txt",
 							"src/favicon.ico",
 							"src/assets",
 							"src/manifest.webmanifest"
