--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -392,6 +392,7 @@
 					<mapEnum>asEnum</mapEnum>
 					<classPatterns>
 						<pattern>net.pladema.**.controller.**Dto</pattern>
+						<pattern>net.pladema.**.service.domain.enums.**</pattern>
 					</classPatterns>
 					<outputKind>module</outputKind>
 					<outputFile>../../front-end/webapp/src/app/modules/api-rest/api-model.d.ts</outputFile>
