Comienza desarrollo de 1.8

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -68,3 +68,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_7.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_8.yml
+    relativeToChangelogFile: true
