--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -104,3 +104,19 @@ internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY}
 # new consultation
 # ===============================
 habilitar.boton.consulta=false
+
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=2MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=6MB
+# Enable response compression
+server.compression.enabled=true
+# The comma-separated list of mime types that should be compressed
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+# Compress the response only if the response size is at least 1KB
