tg-2831 Muteo log de hibernate en tests

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -21,6 +21,8 @@
         <module>interoperability</module>
     </modules>
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<dependencyManagement>
