tg-2750 [BE] Crear servicio createPediatric en EmergencyCareEpisodeService

--- a/dba/liquibase/incrementales-v1_8.yml
+++ b/dba/liquibase/incrementales-v1_8.yml
@@ -158,3 +158,13 @@ databaseChangeLog:
             dropColumn:
                 tableName: diagnostic_report
                 columnName: path_file
+
+    - changeSet:
+        id: observation_vital_sign-dropNotNullConstraint-patient_id
+        author: tmedina
+        comment: Drop not null constraint in patient_id column in observation_vital_sign table
+        changes:
+            - dropNotNullConstraint:
+                columnDataType: int
+                columnName: patient_id
+                tableName: observation_vital_sign
